exports[`require-array-join-separator > invalid(1): foo.join() 1`] = `

  1 | foo.join()

`;

exports[`require-array-join-separator > invalid(1): foo.join() 2`] = `

Message:
> 1 | foo.join()
    |         ^^ Missing the separator argument.

Output:
  1 | foo.join(',')

`;

exports[`require-array-join-separator > invalid(10): function f(foo: Int8Array) { foo.join(); } 1`] = `

  1 | function f(foo: Int8Array) { foo.join(); }

`;

exports[`require-array-join-separator > invalid(10): function f(foo: Int8Array) { foo.join(); } 2`] = `

Message:
> 1 | function f(foo: Int8Array) { foo.join(); }
    |                                      ^^ Missing the separator argument.

Output:
  1 | function f(foo: Int8Array) { foo.join(','); }

`;

exports[`require-array-join-separator > invalid(11): const foo = new Int8Array(); foo.join(); 1`] = `

  1 | const foo = new Int8Array(); foo.join();

`;

exports[`require-array-join-separator > invalid(11): const foo = new Int8Array(); foo.join(); 2`] = `

Message:
> 1 | const foo = new Int8Array(); foo.join();
    |                                      ^^ Missing the separator argument.

Output:
  1 | const foo = new Int8Array(); foo.join(',');

`;

exports[`require-array-join-separator > invalid(2): function f(foo: Set<number>) { [].join.call(foo); } 1`] = `

  1 | function f(foo: Set<number>) { [].join.call(foo); }

`;

exports[`require-array-join-separator > invalid(2): function f(foo: Set<number>) { [].join.call(foo); } 2`] = `

Message:
> 1 | function f(foo: Set<number>) { [].join.call(foo); }
    |                                                ^ Missing the separator argument.

Output:
  1 | function f(foo: Set<number>) { [].join.call(foo, ','); }

`;

exports[`require-array-join-separator > invalid(3): [].join.call(foo) 1`] = `

  1 | [].join.call(foo)

`;

exports[`require-array-join-separator > invalid(3): [].join.call(foo) 2`] = `

Message:
> 1 | [].join.call(foo)
    |                 ^ Missing the separator argument.

Output:
  1 | [].join.call(foo, ',')

`;

exports[`require-array-join-separator > invalid(4): [].join.call(foo,) 1`] = `

  1 | [].join.call(foo,)

`;

exports[`require-array-join-separator > invalid(4): [].join.call(foo,) 2`] = `

Message:
> 1 | [].join.call(foo,)
    |                  ^ Missing the separator argument.

Output:
  1 | [].join.call(foo, ',',)

`;

exports[`require-array-join-separator > invalid(5): [].join.call(foo , ); 1`] = `

  1 | [].join.call(foo , );

`;

exports[`require-array-join-separator > invalid(5): [].join.call(foo , ); 2`] = `

Message:
> 1 | [].join.call(foo , );
    |                   ^^ Missing the separator argument.

Output:
  1 | [].join.call(foo ,  ',',);

`;

exports[`require-array-join-separator > invalid(6): Array.prototype.join.call(foo) 1`] = `

  1 | Array.prototype.join.call(foo)

`;

exports[`require-array-join-separator > invalid(6): Array.prototype.join.call(foo) 2`] = `

Message:
> 1 | Array.prototype.join.call(foo)
    |                              ^ Missing the separator argument.

Output:
  1 | Array.prototype.join.call(foo, ',')

`;

exports[`require-array-join-separator > invalid(7): Array.prototype.join.call(foo, ) 1`] = `

  1 | Array.prototype.join.call(foo, )

`;

exports[`require-array-join-separator > invalid(7): Array.prototype.join.call(foo, ) 2`] = `

Message:
> 1 | Array.prototype.join.call(foo, )
    |                               ^^ Missing the separator argument.

Output:
  1 | Array.prototype.join.call(foo,  ',',)

`;

exports[`require-array-join-separator > invalid(8): (\n\t/**/\n\t[\n\t\t/**/\n\t]\n\t\t/**/\n\t\t.\n\t\t/**/\n\t\tjoin\n\t\t/**/\n\t\t.\n\t\t/**/\n\t\tcall\n\t\t/**/\n\t\t(\n\t\t\t/**/\n\t\t\t(\n\t\t\t\t/**/\n\t\t\t\tfoo\n\t\t\t\t/**/\n\t\t\t)\n\t\t\t/**/\n\t\t\t,\n\t\t\t/**/\n\t\t)/**/\n) 1`] = `

   1 | (
   2 | 	/**/
   3 | 	[
   4 | 		/**/
   5 | 	]
   6 | 		/**/
   7 | 		.
   8 | 		/**/
   9 | 		join
  10 | 		/**/
  11 | 		.
  12 | 		/**/
  13 | 		call
  14 | 		/**/
  15 | 		(
  16 | 			/**/
  17 | 			(
  18 | 				/**/
  19 | 				foo
  20 | 				/**/
  21 | 			)
  22 | 			/**/
  23 | 			,
  24 | 			/**/
  25 | 		)/**/
  26 | )

`;

exports[`require-array-join-separator > invalid(8): (\n\t/**/\n\t[\n\t\t/**/\n\t]\n\t\t/**/\n\t\t.\n\t\t/**/\n\t\tjoin\n\t\t/**/\n\t\t.\n\t\t/**/\n\t\tcall\n\t\t/**/\n\t\t(\n\t\t\t/**/\n\t\t\t(\n\t\t\t\t/**/\n\t\t\t\tfoo\n\t\t\t\t/**/\n\t\t\t)\n\t\t\t/**/\n\t\t\t,\n\t\t\t/**/\n\t\t)/**/\n) 2`] = `

Message:
   1 | (
   2 | 	/**/
   3 | 	[
   4 | 		/**/
   5 | 	]
   6 | 		/**/
   7 | 		.
   8 | 		/**/
   9 | 		join
  10 | 		/**/
  11 | 		.
  12 | 		/**/
  13 | 		call
  14 | 		/**/
  15 | 		(
  16 | 			/**/
  17 | 			(
  18 | 				/**/
  19 | 				foo
  20 | 				/**/
  21 | 			)
  22 | 			/**/
> 23 | 			,
     | 			 ^
> 24 | 			/**/
     | ^^^^^^^
> 25 | 		)/**/
     | ^^^ Missing the separator argument.
  26 | )

Output:
   1 | (
   2 | 	/**/
   3 | 	[
   4 | 		/**/
   5 | 	]
   6 | 		/**/
   7 | 		.
   8 | 		/**/
   9 | 		join
  10 | 		/**/
  11 | 		.
  12 | 		/**/
  13 | 		call
  14 | 		/**/
  15 | 		(
  16 | 			/**/
  17 | 			(
  18 | 				/**/
  19 | 				foo
  20 | 				/**/
  21 | 			)
  22 | 			/**/
  23 | 			,
  24 | 			/**/
  25 | 		 ',',)/**/
  26 | )

`;

exports[`require-array-join-separator > invalid(9): foo?.join() 1`] = `

  1 | foo?.join()

`;

exports[`require-array-join-separator > invalid(9): foo?.join() 2`] = `

Message:
> 1 | foo?.join()
    |          ^^ Missing the separator argument.

Output:
  1 | foo?.join(',')

`;
